force-app/main/default/objects/Order/fields/ValidateNetSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>ValidateNetSalesPrice__c</fullName>
    <formula>IF(TotalAmount &lt; 0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate NetSalesPrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>