force-app/main/default/objects/Order/fields/ValidateOrderAmount__c.field-meta.xml
<CustomField>
    <fullName>ValidateOrderAmount__c</fullName>
    <formula>IF( AND( 
         OR( ISPICKVAL( Source__c , &quot;eCommerce B2C&quot;), ISPICKVAL( Source__c , &quot;eCommerce B2B&quot;) ),
          TotalAmount != OrderImportAmountExclVAT__c), 
1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Compares Order Amount &amp; Order Import Amount (Excl VAT). (Currently Only Used for eCommerce Orders)</inlineHelpText>
    <label>Validate Order Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>