force-app/main/default/objects/Order/fields/ValidateReferenceNumberCheck__c.field-meta.xml
<CustomField>
    <fullName>ValidateReferenceNumberCheck__c</fullName>
    <description>Noordhoff/Plantyn maximum = 10
Liber maximum = 25
Informat = 45</description>
    <formula>IF(NOT(TEXT(Status) = &apos;Activated&apos;),
(IF((TEXT(OperatingCompany__c) = &apos;Plantyn&apos; || AND(TEXT(OperatingCompany__c) = &apos;Noordhoff&apos;, NOT(CONTAINS(Pricebook2.Name, &apos;Professional&apos;)))) &amp;&amp; LEN(CustomerReference__c) &gt; 10 &amp;&amp; NOT(CONTAINS(Pricebook2.Name, &apos;Informat&apos;)), 1,
IF(TEXT(OperatingCompany__c) = &apos;Liber&apos; &amp;&amp; LEN(CustomerReference__c) &gt; 35 &amp;&amp; NOT(CONTAINS(Pricebook2.Name, &apos;Informat&apos;)), 1,
IF(AND(TEXT(OperatingCompany__c) = &apos;Noordhoff&apos;, CONTAINS(Pricebook2.Name, &apos;Professional&apos;), InventoryItemShippingAddressCount__c &gt; 0, LEN(CustomerReference__c) &gt; 10), 1, 0)))), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate ReferenceNumberCheck</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>