force-app/main/default/objects/Order/fields/ValidateShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ValidateShippingAddress__c</fullName>
    <formula>IF(OR(
      CONTAINS(SUBSTITUTE(ShippingStreet, SUBSTITUTE($Label.line_break, &quot;-&quot;, &quot;&quot;),&quot;&lt;BR&gt;&quot;), &apos;&lt;BR&gt;&apos;), 
      FIND(&quot;	&quot;,ShippingStreet) &gt; 0), 
1, 0)</formula>
    <label>Validate ShippingAddress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>