force-app/main/default/objects/Order/fields/ValidateShippingAddressValidated__c.field-meta.xml
<CustomField>
    <fullName>ValidateShippingAddressValidated__c</fullName>
    <formula>IF(AND(ShipToAddressValidated__c=false,$Label.ValidateAddress=&apos;true&apos;),1,0)</formula>
    <label>Validate ShippingAddressValidated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>