force-app/main/default/objects/Order/fields/ValidateShippingCostExclVAT__c.field-meta.xml
<CustomField>
    <fullName>ValidateShippingCostExclVAT__c</fullName>
    <formula>IF(
				AND(
								ISPICKVAL(OperatingCompany__c,&quot;Planyn&quot;),
								OR(
												ISPICKVAL( Source__c , &quot;eCommerce B2C&quot;), ISPICKVAL( Source__c , &quot;eCommerce B2B&quot;)
								),
								ShippingCost__c != OrderImportShippingCost__c
				),
				1,
				0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Compares Expected Shipping Cost &amp; Order Import Shipping Cost. (Currently Only Used for eCommerce Orders)</inlineHelpText>
    <label>Validate Shipping Cost (Excl VAT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>