force-app/main/default/objects/Order/fields/ValidateShipToEmpty__c.field-meta.xml
<CustomField>
    <fullName>ValidateShipToEmpty__c</fullName>
    <formula>IF(AND(Shipto__c = null,MultipleShippingLocations__c=false ),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate ShipToEmpty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>