force-app/main/default/objects/Order/fields/ValidateShiptoErrors__c.field-meta.xml
<CustomField>
    <fullName>ValidateShiptoErrors__c</fullName>
    <formula>IF(Shipto__r.ValidateErrors__c = true &amp;&amp; MultipleShippingLocations__c=false, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate Ship-to Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>