force-app/main/default/objects/Order/fields/ValidateShipToTenderDistributor__c.field-meta.xml
<CustomField>
    <fullName>ValidateShipToTenderDistributor__c</fullName>
    <formula>IF(
    AND(ISPICKVAL(Type, &apos;Transfer Order&apos;), NOT(ISPICKVAL(Shipto__r.CustomerCategory__c, &apos;Tender Distributor&apos;))),
1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate Ship To Tender Distributor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>