force-app/main/default/objects/Order/fields/ValidateStartEndDateonOnItems__c.field-meta.xml
<CustomField>
    <fullName>ValidateStartEndDateonOnItems__c</fullName>
    <formula>IF(NonInventoryItemNoEndDate__c + NonInventoryItemNoStartDate__c &gt; 0 ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValidateStartEndDateonOnItems</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>