force-app/main/default/objects/Order/fields/ValidateTotalLineItemQuantities__c.field-meta.xml
<CustomField>
    <fullName>ValidateTotalLineItemQuantities__c</fullName>
    <formula>IF( AND( 
         OR( ISPICKVAL( Source__c , &quot;eCommerce B2C&quot;), ISPICKVAL( Source__c , &quot;eCommerce B2B&quot;) ),
          TotalLineItemQuantity__c != OrderImportTotalLineQuantities__c), 
1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Compares Total Line Item Quantity &amp; Order Import Total Line Quantities. (Currently Only Used for eCommerce Orders)</inlineHelpText>
    <label>Validate Total Line Item Quantities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>