force-app/main/default/objects/Order/fields/ValidationErrorsOrder__c.field-meta.xml
<CustomField>
    <fullName>ValidationErrorsOrder__c</fullName>
    <formula>ValidateActivateAccountSubsidiaryRequir__c +
ValidateActivateEmailsRequired__c +
ValidateActivateShippingAddressRequired__c +
ValidateActivateValidation__c +
ValidateB2BLineCountError__c +
ValidateDigitalforNetherlands__c+
ValidateInventoryOnMultipleLocations__c +
ValidateReferenceNumberCheck__c +
ValidateShipToEmpty__c +
ValidateBillToEmpty__c +
ValidateNetSalesPrice__c+
ValidateOrderAmount__c +
ValidateShippingCostExclVAT__c +
ValidateTotalLineItemQuantities__c +
ValidateBillingAddress__c +
ValidateShippingAddress__c +
ValidateFreeAndServiceMustbeZeroOnActiv__c +
ValidateShipToTenderDistributor__c +
ValidateAccountStatus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validation errors Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>