force-app/main/default/objects/Order/fields/ValidationErrorsOrderProducts__c.field-meta.xml
<CustomField>
    <fullName>ValidationErrorsOrderProducts__c</fullName>
    <label>Validation errors Order Products</label>
    <summaryFilterItems>
        <field>OrderItem.ValidateAll__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>