force-app/main/default/objects/Order/fields/WarehouseReference__c.field-meta.xml
<CustomField>
    <fullName>WarehouseReference__c</fullName>
    <formula>Account.WarehouseReference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse reference</label>
    <type>Text</type>
</CustomField>