force-app/main/default/objects/Order/fields/WarehouseReferenceActive__c.field-meta.xml
<CustomField>
    <fullName>WarehouseReferenceActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warehouse reference active</label>
    <type>Checkbox</type>
</CustomField>