force-app/main/default/objects/Order/validationRules/ActivateAccountSubsidiaryRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ActivateAccountSubsidiaryRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Status) = &apos;Activated&apos;,  OR(AccountSubsidiary__c = null, NetSuiteIdAccountSubsidiary__c =null))</errorConditionFormula>
    <errorDisplayField>AccountSubsidiary__c</errorDisplayField>
    <errorMessage>Actived Orders must have an Account Subsidiary.</errorMessage>
</ValidationRule>