force-app/main/default/objects/Order/validationRules/ActivatedOrderspositiveamount.validationRule-meta.xml
<ValidationRule>
    <fullName>ActivatedOrderspositiveamount</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Status) =&apos;Activated&apos;,   TotalAmount &lt;0)</errorConditionFormula>
    <errorMessage>Activate Orders must have a positive total</errorMessage>
</ValidationRule>