force-app/main/default/objects/Order/validationRules/ActivateEmailsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ActivateEmailsRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Status) = &apos;Activated&apos;,OR(
				InvoiceEmail__c = null , 
    OrderNotificationEmail__c = null ,
    BillingReminderEmail__c = null))</errorConditionFormula>
    <errorMessage>Activated Orders must have an invoice, order and billing email address.</errorMessage>
</ValidationRule>