force-app/main/default/objects/Order/validationRules/ActivateShippingAddressRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ActivateShippingAddressRequired</fullName>
    <active>false</active>
    <errorConditionFormula>AND(TEXT(Status) = &apos;Activated&apos;, ShippingStreet = null, ShippingPostalCode = null, ShippingCountry = null)</errorConditionFormula>
    <errorMessage>Activated Orders must have Shipping Address information.</errorMessage>
</ValidationRule>