force-app/main/default/objects/Order/validationRules/ActivateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ActivateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Status)=&apos;Activated&apos;, OR(ValidationErrorsOrder__c &gt;= 1,  
			ValidationErrorsOrderProducts__c &gt;= 1))</errorConditionFormula>
    <errorMessage>You can&apos;t activate the order, due to missing information on Order or OrderItem</errorMessage>
</ValidationRule>