force-app/main/default/objects/Order/validationRules/ActivationBlockEcommerce.validationRule-meta.xml
<ValidationRule>
    <fullName>ActivationBlockEcommerce</fullName>
    <active>false</active>
    <errorConditionFormula>And(Text(Status) = &apos;Activated&apos;,
		OR(Text(Source__c)=&apos;eCommerce B2C&apos;,Text(Source__c)=&apos;eCommerce B2B&apos;))</errorConditionFormula>
    <errorMessage>Temporay pause on activating Ecommerce Orders</errorMessage>
</ValidationRule>