force-app/main/default/objects/Order/validationRules/ActiveWithItemGroupMismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>ActiveWithItemGroupMismatch</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Text(Status) =&apos;Activated&apos;, IGComponentMismatch__c = true)</errorConditionFormula>
    <errorMessage>You can&apos;t activate orders with Item Groups that don&apos;t have the correct number of components</errorMessage>
</ValidationRule>