force-app/main/default/objects/Order/validationRules/BlockDeactivatedBilltoOrShipto.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockDeactivatedBilltoOrShipto</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(
				ISPICKVAL(Billto__r.BlockReason__c, &apos;Deactivated&apos;), 
			 ISPICKVAL(Shipto__r.BlockReason__c , &apos;Deactivated&apos;)
  ),
		ISPICKVAL(Status,&apos;Activated&apos;),
		ISCHANGED(Status)
)</errorConditionFormula>
    <errorMessage>Accounts with Block Reason &quot;Deactivated&quot; cannot be used as Bill-to or Ship-to</errorMessage>
</ValidationRule>