force-app/main/default/objects/Order/validationRules/CantActivateOrderwithRelatedOrders.validationRule-meta.xml
<ValidationRule>
    <fullName>CantActivateOrderwithRelatedOrders</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Text(Status)=&apos;Activated&apos;,OR(RelatedOrderActivationBlock__c = true,LineCount__c &gt; 300))</errorConditionFormula>
    <errorMessage>Cant Activate Order with Related Orders or line count greater than 300</errorMessage>
</ValidationRule>