force-app/main/default/objects/Order/validationRules/CreditLimitCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>CreditLimitCheck</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
				TEXT(PaymentMethod__c)=&quot;Invoice&quot;, 
				CreditStatus__c = &quot;Bad&quot;
)</errorConditionFormula>
    <errorMessage>The credit limit of this customer is bad, set the order to prepayment first.</errorMessage>
</ValidationRule>