force-app/main/default/objects/Order/validationRules/FreeAndServiceMustbeZeroOnActivation.validationRule-meta.xml
<ValidationRule>
    <fullName>FreeAndServiceMustbeZeroOnActivation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Text(Status)=&apos;Activated&apos;,AND(OR( TEXT(Type) =&apos;ServiceOrder&apos;,TEXT(Type)=&apos;FreeOrder&apos;),  TotalAmount &gt;0))</errorConditionFormula>
    <errorMessage>Free and Service Orders can&apos;t have a total greater than 0 for Activation</errorMessage>
</ValidationRule>