force-app/main/default/objects/Order/validationRules/NonInventoryStartAndEndDateCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>NonInventoryStartAndEndDateCheck</fullName>
    <active>false</active>
    <errorConditionFormula>(NonInventoryItemNoEndDate__c +  NonInventoryItemNoStartDate__c &gt; 0) &amp;&amp; ISCHANGED( Status ) &amp;&amp; TEXT(Status) = &apos;Activated&apos;</errorConditionFormula>
    <errorMessage>You cannot Activate the order. There are still OrderLines with Non-Inventory Items without Start- and/or EndDate</errorMessage>
</ValidationRule>