force-app/main/default/objects/Order/validationRules/ValidateDigitalforNetherlands.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateDigitalforNetherlands</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ShippingCountry = &apos;Netherlands&apos; , 
NonInventoryItemCount__c &gt; 0 ,
TEXT(Source__c) != &apos;eCommerce B2C&apos; ,
Text(Status) = &apos;Activated&apos; )</errorConditionFormula>
    <errorMessage>Due to VAT related issues you cannot add digital products to a shipping address in the Netherlands. Please contact Finance</errorMessage>
</ValidationRule>