force-app/main/default/objects/Order/validationRules/ValidateOverrideActivate.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateOverrideActivate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Status)=&apos;Activated&apos;, OrderActivateOverride__c = true)</errorConditionFormula>
    <errorMessage>Order Activate has been over ridden. Please check with team for reason</errorMessage>
</ValidationRule>