force-app/main/default/objects/Order/listViews/All_Activated_Orders_Trade.listView-meta.xml
<ListView>
    <fullName>All_Activated_Orders_Trade</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ExternalOrderId__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>NSOrderStatus__c</columns>
    <columns>NSOrderInternalId__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ActivateforBatchProcessing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>Trade</value>
    </filters>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <label>All Activated Orders Trade</label>
    <sharedTo>
        <group>AllAdmins</group>
    </sharedTo>
</ListView>