force-app/main/default/objects/Order/listViews/All_Draft_Orders_B2B_eCommerce.listView-meta.xml
<ListView>
    <fullName>All_Draft_Orders_B2B_eCommerce</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ExternalOrderId__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ErrorReason__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ActivateforBatchProcessing__c</columns>
    <columns>TriggerBusinessRules__c</columns>
    <columns>OrderImportLineCountSent__c</columns>
    <columns>OrderImportLineCount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>eCommerce B2C,eCommerce B2B</value>
    </filters>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Draft,Under Review</value>
    </filters>
    <label>All Draft Orders eCommerce</label>
</ListView>