force-app/main/default/objects/Order/listViews/All_Draft_Orders_Informat.listView-meta.xml
<ListView>
    <fullName>All_Draft_Orders_Informat</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ErrorReason__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TriggerBusinessRules__c</columns>
    <columns>ActivateforBatchProcessing__c</columns>
    <columns>Actionee__c</columns>
    <columns>ShipComplete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>B2B Salesforce</value>
    </filters>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Draft,Under Review</value>
    </filters>
    <filters>
        <field>LineCount__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>PRICEBOOK2.NAME</field>
        <operation>contains</operation>
        <value>Informat</value>
    </filters>
    <label>All Draft Orders Informat</label>
    <sharedTo>
        <group>AllUsersPlantyn</group>
    </sharedTo>
</ListView>