force-app/main/default/objects/Order/listViews/AllActivatedOrders.listView-meta.xml
<ListView>
    <fullName>AllActivatedOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>NSOrderStatus__c</columns>
    <columns>NSOrderInternalId__c</columns>
    <columns>LineCount__c</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <columns>LastUpdateToAWS__c</columns>
    <columns>SuccessStatusOfLastAWSUpdate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS_CODE</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>ORDERS.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Activated Orders</label>
</ListView>