force-app/main/default/objects/Order/listViews/AllDraftOrders.listView-meta.xml
<ListView>
    <fullName>AllDraftOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>ExternalOrderId__c</columns>
    <columns>Source__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LineCount__c</columns>
    <columns>ActivateforBatchProcessing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LineCount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ValidationErrorsOrder__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ValidationErrorsOrderProducts__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Source__c</field>
        <operation>notEqual</operation>
        <value>B2B Shop,Trade,eCommerce B2B</value>
    </filters>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Under Review</value>
    </filters>
    <label>All Draft Orders</label>
</ListView>