force-app/main/default/objects/Order/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Source__c</columns>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PricingMethod__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ExternalOrderId__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <columns>OperatingCompany__c</columns>
    <columns>LastUpdateToAWS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>